Revert "Update config.yml"
This reverts commit 84c4de1ba15b03d2e815b85e2d61094e0b0c1f44.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
       working_directory: ~/build_directory/algoliasearch-magento-2
       steps:
         - checkout
-        - run: composer self-update
+        - run: sudo composer self-update
         - run: composer config http-basic.'repo.magento.com' ${MAGENTO_AUTH_USERNAME} ${MAGENTO_AUTH_PASSWORD}
         - restore_cache:
             keys:
