fix: permissions restoring cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,10 @@ jobs:
         working_directory: ~/build_directory/algoliasearch-magento-2
         steps:
             - checkout
+            - run:
+                name: Setting permissions
+                command: |
+                    sudo chown circleci:circleci ~/.composer/
             - restore_cache:
                   keys:
                       - composer-v1-{{ checksum "composer.json" }}
