--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,19 +49,19 @@ shared: &shared
                 php -dmemory_limit=-1 ../../../vendor/bin/phpunit ../../../vendor/algolia/algoliasearch-magento-2/Test
 
 jobs:
-    "magento-2.2":
-        <<: *shared
-        docker:
-            - image: algolia/magento2-circleci:v2-2.2.8
-
     "magento-2.3":
         <<: *shared
         docker:
-            - image: algolia/magento2-circleci:v2-2.3.0
+            - image: algolia/magento2-circleci:v3-2.3.5-p2
+
+    "magento-2.4":
+        <<: *shared
+        docker:
+            -image: algolia/magento2-circleci:v3-2.4.0
 
     "quality-tools":
         docker:
-            - image: algolia/magento2-circleci:v2-2.3.0
+            - image: algolia/magento2-circleci:v3-2.3.5-p2
         working_directory: ~/build_directory/algoliasearch-magento-2
         steps:
             - checkout
@@ -71,8 +71,8 @@ jobs:
                     sudo chown circleci:circleci ~/.composer/
             - restore_cache:
                   keys:
-                      - composer-v3-{{ checksum "composer.json" }}
-                      - composer-v3-
+                      - composer-v4-{{ checksum "composer.json" }}
+                      - composer-v4-
                       
             - run:
                   name: Prepare environment
@@ -89,7 +89,7 @@ jobs:
                       cd ~/magento_directory
                       composer dump-autoload
             - save_cache:
-                  key: composer-v3-{{ checksum "composer.json" }}
+                  key: composer-v4-{{ checksum "composer.json" }}
                   paths:
                       - vendor
             - run:
@@ -101,6 +101,6 @@ workflows:
     version: 2
     build:
         jobs:
-            - "magento-2.2"
             - "magento-2.3"
+            - "magento-2.4"
             - "quality-tools"
