--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ shared: &shared
             name: Install the extension
             command: |
                 cd ~/magento_directory
+                php -dmemory_limit=-1 bin/magento module:disable Magento_Amqp
                 php -dmemory_limit=-1 bin/magento module:enable Algolia_AlgoliaSearch
                 php -dmemory_limit=-1 bin/magento setup:upgrade
 
