--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ shared: &shared
             name: Get the right tests config for DB and administration
             command: |
                 mv ~/build_directory/algoliasearch-magento-2/dev/tests/install-config-mysql.php ~/magento_directory/dev/tests/integration/etc/install-config-mysql.php
+                mv ~/build_directory/algoliasearch-magento-2/dev/tests/phpunit.xml ~/magento_directory/dev/tests/integration/phpunit.xml
 
         - run:
               name: Before setup
