--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,13 @@ shared: &shared
                 ps aux | grep mysql
 
         - run:
+              name: Start elasticsearch service
+              command: |
+                  sudo service elasticsearch start
+                  sleep 2
+                  ps aux | grep elasticsearch
+                  
+        - run:
             name: Install the extension
             command: |
                 cd ~/magento_directory
