test es in v2.3.5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ shared: &shared
         - run:
               name: Start elasticsearch service
               command: |
-                  # sudo service elasticsearch start
-                  # sleep 2
-                  # ps aux | grep elasticsearch
+                  sudo service elasticsearch start
+                  sleep 2
+                  ps aux | grep elasticsearch
 
         - run:
             name: Install the extension
