--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,11 +40,11 @@ shared: &shared
             name: Get the right tests config for DB and administration
             command: |
                 mv ~/build_directory/algoliasearch-magento-2/dev/tests/install-config-mysql.php ~/magento_directory/dev/tests/integration/etc/install-config-mysql.php
-                cp ~/magento_directory/app/etc/config.php ~/magento_directory/dev/tests/integration/etc/config.php
 
         - run:
               name: Before setup
               command: |
+                  echo 'memory_limit = 256M' | sudo tee /usr/local/etc/php/php.ini
                   wget https://alg.li/algolia-keys && chmod +x algolia-keys
 
         - run:
@@ -55,8 +55,7 @@ shared: &shared
                 export CI_PROJ_USERNAME=$CIRCLE_PROJECT_USERNAME
                 export CI_PROJ_REPONAME=$CIRCLE_PROJECT_REPONAME
                 eval $(~/build_directory/algoliasearch-magento-2/algolia-keys export)
-                echo 'memory_limit = 256M' | sudo tee /usr/local/etc/php/php.ini
-                php -dmemory_limit=-1 ../../../vendor/bin/phpunit ../../../vendor/algolia/algoliasearch-magento-2/Test
+                php -dmemory_limit=-1 ../../../vendor/bin/phpunit --testdox ../../../vendor/algolia/algoliasearch-magento-2/Test
 
 jobs:
     "magento-2.3":
