--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,14 @@ shared: &shared
                 cd ~/magento_directory
                 sudo service elasticsearch start # for some reasons has to be launched with the step
                 sleep 10
-                php -dmemory_limit=-1 bin/magento module:disable Magento_WebapiAsync Magento_Amqp Magento_MysqlMq Magento_MessageQueue Dotdigitalgroup_Chat Dotdigitalgroup_Email
+                php -dmemory_limit=-1 bin/magento module:disable Magento_WebapiAsync Magento_Amqp Magento_MysqlMq Magento_MessageQueue
                 php -dmemory_limit=-1 bin/magento module:enable Algolia_AlgoliaSearch
                 php -dmemory_limit=-1 bin/magento setup:upgrade
 
         - run:
             name: Get the right tests config for DB and administration
             command: |
+                mv ~/build_directory/algoliasearch-magento-2/dev/tests/phpunit.xml ~/magento_directory/dev/tests/integration/phpunit.xml
                 mv ~/build_directory/algoliasearch-magento-2/dev/tests/install-config-mysql.php ~/magento_directory/dev/tests/integration/etc/install-config-mysql.php
 
         - run:
