--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,8 @@ shared: &shared
             name: Run tests
             command: |
                 cd ~/magento_directory/dev/tests/integration
-                export CI_PROJ_USERNAME=$CIRCLE_PR_USERNAME
-                export CI_PROJ_REPONAME=$CIRCLE_PR_REPONAME
+                echo $CIRCLE_PROJECT_REPONAME
+                echo $CIRCLE_BUILD_NUM
                 curl -s https://algoliasearch-client-keygen.herokuapp.com | sh >> $BASH_ENV
                 sudo service elasticsearch start # for some reasons has to be launched with the step
                 sleep 10
