new step for keygen

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,15 +41,19 @@ shared: &shared
               name: Before setup
               command: |
                   echo 'memory_limit = 256M' | sudo tee /usr/local/etc/php/php.ini
+                  sudo service elasticsearch start # for some reasons has to be launched with the step
+                  sleep 10
+
+        - run:
+              name: Keygen
+              command: |
+                  curl -s https://algoliasearch-client-keygen.herokuapp.com | sh >> $BASH_ENV
+                  echo $ALGOLIA_SEARCH_KEY_1
 
         - run:
             name: Run tests
             command: |
                 cd ~/magento_directory/dev/tests/integration
-                curl -s https://algoliasearch-client-keygen.herokuapp.com | sh >> $BASH_ENV
-                printenv
-                sudo service elasticsearch start # for some reasons has to be launched with the step
-                sleep 10
                 php -dmemory_limit=-1 ../../../vendor/bin/phpunit --debug ../../../vendor/algolia/algoliasearch-magento-2/Test
 
 jobs:
