--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": ["MIT"],
   "version": "3.14.0-beta.1",
   "require": {
-    "php": "~8.1|~8.2",
+    "php": "~8.1|~8.2|~8.3",
     "magento/framework": "~102.0|~103.0",
     "algolia/algoliasearch-client-php": "^4.0@alpha",
     "guzzlehttp/guzzle": "^6.3.3|^7.3.0",
