--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "require": {
     "php": "~8.1|~8.2|~8.3",
     "magento/framework": "~103.0",
-    "algolia/algoliasearch-client-php": "^4.0@beta",
+    "algolia/algoliasearch-client-php": "^4.0.0",
     "guzzlehttp/guzzle": "^6.3.3|^7.3.0",
     "ext-json": "*",
     "ext-PDO": "*",
